--- a/client/views/logon/login.html
+++ b/client/views/logon/login.html
@@ -2,7 +2,7 @@
 <!-- Cabeçalho da Janela -->
 <div class="row" id="cabPag">
     <div class="col-xs-12 col-lg-12 col-md-12 col-sm-12">
-        <h1 style="text-align: center">Cadastro</h1>
+        <h1 style="text-align: center">Login</h1>
     </div>
 </div>
 
@@ -13,11 +13,11 @@
             
 
                     <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12">
-                        <label for="data_exec">
-                            E-mail
+                        <label for="username">
+                           Usuário
                         </label>
 
-                        <input type="text" ng-model="cadastro.email" class="form-control" id="email" placeholder="Digite seu E-mail"/>  
+                        <input type="text" ng-model="pessoa.username" class="form-control" id="username" placeholder="Usuário"/>  
 
 
                     </div>
@@ -26,10 +26,10 @@
             <div class="form-group">
                 <div class="row">
                     <div class=" col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                        <label for="end_rua">
+                        <label for="senha">
                             Senha
                         </label>
-                        <input type="password" ng-model="cadastro.senha" class="form-control" id="senha" placeholder="Digite sua senha"/>
+                        <input type="password" ng-model="pessoa.senha" class="form-control" id="senha" placeholder="Senha"/>
                     </div>
                     
         
@@ -39,7 +39,7 @@
             <div class="form-group">
                 <div class="row">
                     <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                        <button type="button" ng-click="cadastrar(cadastro)" class="btn btn-success"><span class="btn-success"></span>Salvar</button>
+                        <button type="button" ng-click="login(pessoa)" class="btn btn-success"><span class="btn-success"></span>Entrar</button>
                         
          
                     </div>
