--- a/client/views/leiloes-abertos.html
+++ b/client/views/leiloes-abertos.html
@@ -71,36 +71,21 @@
                         </label>
                         <input type="text" ng-model="leilao.dataHoraInicio" class="form-control" id="data_exec" readonly="true"/>                        
                     </div>
-                    <!--<div class="col-lg-3 col-md-6 col-sm-12 col-xs-12">
-                        <label for="hora_exec">
-                            Hora da Execução
-                        </label>
-                        <input type="text" ng-model="leilao.hora_exec" class="form-control" id="hora_exec" placeholder="Ex.: XX:XX"/>                        
-                    </div>-->
+
                     <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12">
                         <label for="data_exec">
                             Data da Execução
                         </label>
                         <input type="text" ng-model="leilao.dataHoraExecucao" class="form-control" id="data_exec" readonly="true"/>                        
                     </div>
-                    <!--<div class="col-lg-3 col-md-6 col-sm-12 col-xs-12">
-                        <label for="hora_exec">
-                            Hora da Execução
-                        </label>
-                        <input type="text" ng-model="leilao.hora_exec" class="form-control" id="hora_exec" placeholder="Ex.: XX:XX"/>                        
-                    </div>-->
+
                     <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12">
                         <label for="data_limite">
                             Data Limite dos Lances
                         </label>
                         <input type="text" ng-model="leilao.dataHoraFinal" class="form-control" id="data_limite" readonly="true"/>                        
                     </div>
-                    <!--<div class="col-lg-3 col-md-6 col-sm-12 col-xs-12">
-                        <label for="hora_limite">
-                            Hora Limite dos Lances
-                        </label>
-                        <input type="text" ng-model="leilao.hora_limite" class="form-control" id="hora_limite" placeholder="Ex.: XX:XX"/>                        
-                    </div>-->
+
                 </div>
             </div>
 
@@ -115,24 +100,6 @@
                 </div>
             </div>
 
-            <!--
-            <div class="form-group">
-                <div class="row">
-                    <div class=" col-lg-6 col-md-6 col-sm-12 col-xs-12">
-                        <label for="valor_min">
-                            Valor Mínimo
-                        </label>
-                        <input type="text" ng-model="leilao.valor_min" class="form-control" id="valor_min" placeholder="Ex.: $ 00.00"/>
-                    </div>
-                    <div class=" col-lg-6 col-md-6 col-sm-12 col-xs-12">
-                        <label for="valor_max">
-                            Valor Máximo
-                        </label>
-                        <input type="text" ng-model="leilao.valor_max" class="form-control" id="valor_max" placeholder="Ex.: $ 00.00"/>
-                    </div>
-                </div>
-            </div>
-            -->
 
             <div class="form-group">
                 <div class="row">
@@ -142,50 +109,6 @@
                         </label>
                         <input type="text" ng-model="leilao.endereco" class="form-control" id="end_rua" readonly="true"/>
                     </div>
-                    <!--
-                    <div class=" col-lg-6 col-md-6 col-sm-12 col-xs-12">
-                        <label for="end_rua">
-                            Rua ou Avenida
-                        </label>
-                        <input type="text" ng-model="leilao.end_rua" class="form-control" id="end_rua" placeholder="Ex.: Rua Exemplo"/>
-                    </div>
-                    <div class=" col-lg-3 col-md-3 col-sm-12 col-xs-12">
-                        <label for="end_nro">
-                            Número
-                        </label>
-                        <input type="text" ng-model="leilao.end_nro" class="form-control" id="end_nro" placeholder="Ex.: 1234"/>
-                    </div>
-                    <div class=" col-lg-3 col-md-3 col-sm-12 col-xs-12">
-                        <label for="end_compl">
-                            Complemento
-                        </label>
-                        <input type="text" ng-model="leilao.end_compl" class="form-control" id="end_compl" placeholder="Ex.: AP.701"/>
-                    </div>
-                </div>
-            </div>
-
-            <div class="form-group">
-                <div class="row">
-                    <div class=" col-lg-6 col-md-6 col-sm-12 col-xs-12">
-                        <label for="end_bairro">
-                            Bairro
-                        </label>
-                        <input type="text" ng-model="leilao.end_bairro" class="form-control" id="end_bairo" placeholder="Ex.: Exemplo"/>
-                    </div>
-                    <div class=" col-lg-3 col-md-3 col-sm-12 col-xs-12">
-                        <label for="end_cidade">
-                            Cidade
-                        </label>
-                        <input type="text" ng-model="leilao.end_cidade" class="form-control" id="end_cidade" placeholder="Ex.: Exemplo"/>
-                    </div>
-                    <div class=" col-lg-3 col-md-3 col-sm-12 col-xs-12">
-                        <label for="end_uf">
-                            Estado
-                        </label>
-                        <input type="text" ng-model="leilao.end_uf" class="form-control" id="end_uf" placeholder="Ex.: RS"/>
-                    </div>
-                </div>
-            </div>-->
 
                 </div>
             </div>
@@ -193,7 +116,7 @@
         <div class="row" ng-hide="campoLance">
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                 <button type="button" ng-click="removeInfo()" class="btn btn-warning"><span class="glyphicon glyphicon-menu-left"></span> Voltar</button>
-                <button type="button" ng-click="setInfoLance()"class="btn btn-success"><span class="glyphicon glyphicon-bitcoin"></span> Dar um lance</button>
+                <button ng-hide="!showMenu" type="button" ng-click="setInfoLance()"class="btn btn-success"><span class="glyphicon glyphicon-bitcoin"></span> Dar um lance</button>
             </div>
         </div>
         <div class="row" ng-show="campoLance" >
@@ -226,6 +149,6 @@
             <button type="button" ng-click="removeInfo()" class="btn btn-warning"><span class="glyphicon glyphicon-menu-left"></span> Voltar</button>
             <button type="button" ng-click="cadastrarLance(lance, leilao)" class="btn btn-success"><span class="glyphicon glyphicon-save"></span> Salvar Lance</button>
         </div>
-        <!-- ng-click="salvarEdicao()" -->
+
     </div>
 </div>
