--- a/client/views/perfil.html
+++ b/client/views/perfil.html
@@ -6,24 +6,24 @@
 </div>
 
 <div class="container col-lg-12 col-md-12 col-sm-12 col-xs-12" style="margin-top: 10px;">
-    <div class="row" ng-init="buscar()">
+    <div class="row" >
         <form role="form" method="POST" >
             <div class="form-group">
-                <div class="row">
+                <div class="row" ng-init="buscar();">
                     <div class="col-lg-3 col-md-3 col-sm-12 col-xs-12">
                         <label for="pessoa">
                             Pessoa <br>
                         </label>
                         <div>
                             <input type="radio" name="op" id="op1" checked onclick="location.href = '#/perfil'"> Física
-                            <input type="radio" name="op" id="op2" onclick="location.href = '#/perfil-juridica-novo'"> Jurídica
+                            <input type="radio" name="op" id="op2" onclick="location.href = '#/perfil-juridica'"> Jurídica
                         </div>
                     </div>
                     <div class="col-lg-9 col-md-9 col-sm-12 col-xs-12">
                         <label for="nome">
                             Nome
                         </label>
-                        <input  type="text"  ng-model="lista.nome" class="form-control" id="pessoa_nome" />
+                        <input  type="text" ng-model="busca.nome" class="form-control" id="pessoa_nome" />
                     </div>
                 </div>
             </div>
@@ -33,25 +33,25 @@
                     <label for="cpf">
                         CPF
                     </label>
-                    <input type="text" ng-model="lista.cpf" mask="999.999.999-99" clean="true" class="form-control" id="cpf"/>
+                    <input type="text" ng-model="busca.cpf" mask="999.999.999-99" clean="true" class="form-control" id="cpf"/>
                 </div>
                 <div class="col-lg-3 col-md-6 col-sm-12 col-xs-12">
                     <label for="nascimento">
                         Data de Nascimento
                     </label>
-                    <input type="text" ng-model="lista.DataNascimento" mask="99/99/9999" clean="true" class="form-control" id="nascimento"/>
+                    <input type="text" ng-model="busca.dataNascimento" mask="99/99/9999" clean="true" class="form-control" id="nascimento"/>
                 </div>
                 <div class="col-lg-3 col-md-6 col-sm-12 col-xs-12">
                     <label for="telefone">
                         Telefone
                     </label>
-                    <input type="text" ng-model="lista.telefones" mask="(99) 9999-9999" clean="true" class="form-control" id="telefone"/>
+                    <input type="text" ng-model="busca.telefones" mask="(99) 9999-9999" clean="true" class="form-control" id="telefone"/>
                 </div>
                 <div class="col-lg-3 col-md-6 col-sm-12 col-xs-12">
                     <label for="email">
                         email
                     </label>
-                    <input type="text" ng-model="lista.email" class="form-control" id="email"/>
+                    <input type="text" ng-model="busca.email" class="form-control" id="email"/>
                 </div>
             </div>
 
@@ -61,14 +61,14 @@
                         <label for="username">
                             Username
                         </label>
-                        <input type="text" ng-model="lista.username" class="form-control" id="username"/>
+                        <input type="text" ng-model="busca.username" class="form-control" id="username"/>
                     </div>
 
                     <div class="col-lg-3 col-md-6 col-sm-12 col-xs-12">
                         <label for="senha">
                             Senha
                         </label>
-                        <input type="password" ng-model="lista.senha" class="form-control" id="senha"/>
+                        <input type="password" ng-model="busca.senha" class="form-control" id="senha"/>
                     </div>
                 </div>
 
@@ -77,10 +77,10 @@
 
         <div class="row">
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                <button type="button" ng-click="excluir(lista)" class="btn btn-sm btn-danger" alt="Excluir" title="Excluir">
+                <button type="button" ng-click="excluir(busca)" class="btn btn-sm btn-danger" alt="Excluir" title="Excluir">
                     <span class="glyphicon glyphicon-remove"></span> Excluir
                 </button>
-                <button type="button" ng-click="editar(lista)" class="btn btn-sm btn-default" alt="Editar" title="Editar">
+                <button type="button" ng-click="editar(busca)" class="btn btn-sm btn-default" alt="Editar" title="Editar">
                     <span class="glyphicon glyphicon-edit"></span> Editar
                 </button>
             </div>
